# i3_rust_bar

./: Cargo.toml
src/: main.rs
